--- a/index1.htm
+++ b/index1.htm
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+
+    <!-- ------------------------------ nav bar ------------------------------ -->
     <nav id="zamato-sec">
     <div class="navigation">
         <div>
@@ -31,6 +33,8 @@
         <a href=""><button>Register your restaurant</button></a>
     </div>
 
+    <!-- ------------------------------ main container ------------------------------ -->
+
     <section>
         <div class="container">
         <div class="container1">
@@ -48,31 +52,10 @@
         <div>FSSAI license</div>
     </div>  
 </div>
+</div>
+</section>
+ </nav>
 
-
-       </div>
-
-
-
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        
-        </div>
-
-        <!-- <div><i class="fa-solid fa-circle-check"></i></div> -->
-    </section>
-    </nav>
-
-    <!-- <main>
-        <div class="main1">
-            <div></div>
-            <h1>Why should you partner with Zomato?</h1>
-            <div></div>
-        </div>
-    </main> -->
     
 </body>
 </html>
